src/tests/snapshots/gitu__tests__branch__branch_menu.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main v1.0.0 v2.0.0 origin/main add initial-file         Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Branch                                                                         |
 b     Checkout branch/revision                                                 |
 c     Checkout new branch                                                      |
 s     Spinoff branch                                                           |
 K     Delete branch                                                            |
 m     Rename branch                                                            |
 q/esc Quit/Close                                                               |
styles_hash: 932fdf42b6b7789f
