src/tests/snapshots/gitu__tests__branch__checkout_new_branch.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌On branch new                                                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main new origin/main add initial-file                   Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout -b new                                                           |
Switched to a new branch 'new'                                                  |
styles_hash: b25c3a955ed49870
