src/tests/snapshots/gitu__tests__branch__checkout_new_branch_start_point.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌On branch new                                                                  |
                                                                                |
 Recent commits                                                                 |
 c84f226 new unmerged add first commit                                          |
 b66a0bf main merged origin/main add initial-file                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout -b new unmerged                                                  |
Switched to a new branch 'new'                                                  |
styles_hash: 64b6fb8b841715c1
