src/tests/snapshots/gitu__tests__branch__checkout_new_branch_starting_point_picker.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main merged origin/main add initial-file                               |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 5/5   Create branch starting at › █                                            |
▌main                                                                           |
 merged                                                                         |
 unmerged                                                                       |
 origin/HEAD                                                                    |
 origin/main                                                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 106946388e06558f
