src/tests/snapshots/gitu__tests__branch__checkout_picker_filter.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main v1.0.0 v2.0.0 origin/main add initial-file                        |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 2/7   Checkout › feat█                                                         |
▌feature-a                                                                      |
 feature-b                                                                      |
 feat                                                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 44c060aaeb156b24
