src/tests/snapshots/gitu__tests__branch__checkout_picker_navigate.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main v1.0.0 v2.0.0 origin/main add initial-file                        |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 7/7   Checkout › █                                                             |
 bugfix-123                                                                     |
 feature-a                                                                      |
▌feature-b                                                                      |
 origin/HEAD                                                                    |
 origin/main                                                                    |
 v1.0.0                                                                         |
 v2.0.0                                                                         |
                                                                                |
                                                                                |
                                                                                |
styles_hash: e15bb56a3ebe4b42
