src/tests/snapshots/gitu__tests__branch__checkout_select_from_list.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌On branch feature-a                                                            |
                                                                                |
 Recent commits                                                                 |
 3b23a7d feature-a add feature-a commit                                         |
 b66a0bf main v1.0.0 v2.0.0 origin/main add initial-file                        |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout feature-a                                                        |
Switched to branch 'feature-a'                                                  |
styles_hash: 2f476764ee015367
